[gd_scene load_steps=2 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]

[node name="Server" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HostButton" type="Button" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 411.0
margin_top = 180.0
margin_right = 561.0
margin_bottom = 215.0
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 411.0
margin_top = 380.0
margin_right = 561.0
margin_bottom = 415.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TitleScreen/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="TitleScreen/JoinButton" to="." method="_on_JoinButton_pressed"]
